bugfix: use z-index value that is similar to child elems set via js

--- a/src/htdocs/css/_statusBar.scss
+++ b/src/htdocs/css/_statusBar.scss
@@ -4,7 +4,7 @@
   left: 0;
   position: fixed;
   width: 100%;
-  z-index: 1000;
+  z-index: 10000;
 
   p {
     background-color: rgb(255, 255, 120);
